--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 addopts = --ds=config.settings.test --reuse-db
-python_files = tests.py test_*.py
+python_files = test_*.py
 norecursedirs = node_modules
